--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "npm run build",
     "build": "tsc",
     "prebuild": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc --clean --all --reporter=text-summary mocha --config test/.mocharc.yml test/**/*.spec.ts",
-    "test:cov": "nyc --clean --all --reporter=html --reporter=text mocha --config test/.mocharc.yml test/**/*.spec.ts"
+    "test": "nyc --clean --all --reporter=text-summary mocha test/**/*.spec.ts",
+    "test:cov": "nyc --clean --all --reporter=html --reporter=text mocha test/**/*.spec.ts"
   },
   "author": "NUTES/UEPB",
   "license": "Apache-2.0",
@@ -58,18 +58,18 @@
     "communication"
   ],
   "dependencies": {
-    "amqp-client-node": "^1.0.9"
+    "amqp-client-node": "^1.0.10"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.0",
+    "@types/node": "^14.0.13",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "nyc": "^15.0.1",
-    "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
+    "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
   },
   "files": [
     "lib/**/*"
